# ocr-analysis-tool

./: .gitignore  README.md  ocr_analysis.ipynb  pyproject.toml
ocr_analysis_tool/: draw_boxes.py
tests/: test_ocr_analysis_tool.py
